--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>parqueaderoceiba</name>
+	<name>cinema</name>
 	<comment>Project cinema created by Buildship.</comment>
 	<projects>
 	</projects>
