--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,11 +5,14 @@ sonar.projectName=Ceiba-Estacionamiento(jonathan.payares)
 sonar.projectDescription=ADN Ceiba simulacion de un Parqueadero
 sonar.projectVersion=1.0
 
-sonar.source=infraestructura/src/main/java
-sonar.java.binaries=infraestructura/build/classes/java/main
+sonar.modules=aplicacion,dominio,infraestructura
+infraestructura.sonar.projectBaseDir    =	infraestructura
+aplicacion.sonar.projectBaseDir 		=	aplicacion
+dominio.sonar.projectBaseDir    		=	dominio
 
-sonar.test=infraestructura/src/test/java
-sonar.java.test.binaries=infraestructura/build/classes/java/test
-
-sonar.jacoco.reportPaths=infraestructura/build/jacoco/jacocoTest.exec
-sonar.junit.reportsPaths=infraestructura/build/test-results
+sonar.source=src/main/java
+sonar.java.binaries=build/classes/java/main
+sonar.test=src/test/java
+sonar.java.test.binaries=build/classes/java/test
+sonar.jacoco.reportPaths=build/jacoco/jacocoTest.exec
+sonar.junit.reportsPaths=build/test-results
