--- a/aplicacion/build.gradle
+++ b/aplicacion/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 	
 	testImplementation 'junit:junit:4.12'
   	testImplementation 'org.mockito:mockito-all:1.10.19'
+  	
+  	compileOnly 'org.projectlombok:lombok:1.16.18'
+	annotationProcessor 'org.projectlombok:lombok:1.16.18'
 	
 	implementation project(':dominio')
 }
