--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,9 +10,9 @@ infraestructura.sonar.projectBaseDir    =	infraestructura
 aplicacion.sonar.projectBaseDir 		=	aplicacion
 dominio.sonar.projectBaseDir    		=	dominio
 
-sonar.source=src/main/java
+sonar.sources=src/main/java
 sonar.java.binaries=build/classes/java/main
-sonar.test=src/test/java
+sonar.tests=src/test/java
 sonar.java.test.binaries=build/classes/java/test
 sonar.jacoco.reportPaths=build/jacoco/test.exec
-sonar.junit.reportsPaths=build/test-results/test
+sonar.junit.reportPaths=build/test-results/test
